Feature/be/#92 기록지 작성 api 구현 (#103)
* feat: entity schema 변경

* feat: entity schema 수정 및 기본 service 로직 작성

* feat: DocumentQueryRepository 생성